# bluecore

./: .claudeignore  .gitignore  LICENSE  README.md  cloude.md  index.html  package-lock.json  package.json  postcss.config.cjs  progress.md  tailwind.config.cjs  tech_debt.md  vite.config.ts
config/: default.json  engines.json  feature_flags.json  modules.json
docs/: architecture.md  enable_chromium.md  engine_switching.md  internal_api.md  module_system.md
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: content_api.rs  engine_api.rs  identity_api.rs  mod.rs  modules.rs  navigation_api.rs  performance_api.rs  security_api.rs  split_api.rs  tab_api.rs  ui_api.rs
src-tauri/src/config/: mod.rs
src-tauri/src/core/: engine_manager.rs  mod.rs  navigation.rs  performance_manager.rs  security_manager.rs  split_view_manager.rs  tab_manager.rs  ui_config_manager.rs  window.rs
src-tauri/src/engines/: chromium_fork.rs  engine_trait.rs  mod.rs  tauri_engine.rs
src-tauri/src/identity/: mod.rs  session.rs
src-tauri/src/modules/: mod.rs  privacy_shield.rs
src-tauri/src/storage/: mod.rs
src/api/: BlueCoreAPI.ts
src/app/: main.tsx
src/app/api/: bluecore-api.ts
src/app/layout/: AddressBar.tsx  BrowserShell.tsx  TabBar.tsx
src/app/modules/: SettingsModule.tsx  mod.tsx  registry.ts
src/app/views/: mod.tsx
src/components/Settings/: ModuleCenter.tsx
src/hooks/: useModules.ts  useTabs.ts
src/types/: modules.d.ts
