[package]
name = "bluecore"
version = "0.1.0"
description = "A next-generation modular browser."
authors = ["BlueCore Team"]
license = "MPL-2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.7", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.23.1", features = ["v4"] }
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
